syntax = "proto3";

option csharp_namespace = "SensorSystem.GraphDefinitions.Protos";

package GraphDefinitionService;

service GraphDefinitions {
  rpc Get(GetRequest) returns (GetResponse);
  rpc GetAll(GetAllRequest) returns (GetAllResponse);
}

message GetRequest {
  int32 graphDefinitionId = 1;
}

message GetResponse {
  GraphDefinition graphDefnition = 1;
}

message GetAllRequest {
  string systemId = 1;
}

message GetAllResponse {
  repeated GraphDefinition graphDefinitions = 1;
}

message GraphDefinition {
  string id = 1;
  string name = 2;
  repeated GraphDefinitionItem items = 3;
}

message GraphDefinitionItem {
  string id = 1;
  int32 type = 2;
  int32 color = 3;
}